--- a/index.html
+++ b/index.html
@@ -1,64 +1,61 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
+	<head>
+		<meta charset="utf-8">
 
-    <title>Ratmap</title>
+		<title>reveal.js - The HTML Presentation Framework</title>
 
-    <meta name="description" content="A visualization of NYC rat sightings">
-    <meta name="author" content="Meredith Myers">
+		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="author" content="Hakim El Hattab">
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-    <link rel="stylesheet" href="css/reveal.min.css">
-    <link rel="stylesheet" href="css/theme/default.css" id="theme">
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/theme/black.css" id="theme">
 
-    <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+		<!-- Code syntax highlighting -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-    <!-- If the query includes 'print-pdf', include the PDF print sheet -->
-    <script>
-    if (window.location.search.match(/print-pdf/gi)) {
-        var link = document.createElement('link');
-        link.rel = 'stylesheet';
-        link.type = 'text/css';
-        link.href = 'css/print/pdf.css';
-        document.getElementsByTagName('head')[0].appendChild(link);
-    }
-    </script>
+		<!-- Printing and PDF exports -->
+		<script>
+			var link = document.createElement( 'link' );
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+			document.getElementsByTagName( 'head' )[0].appendChild( link );
+		</script>
 
-    <!--[if lt IE 9]>
+		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
+        <style>
+            .thumbnail {
+                width: 40%;
+            }
+            .thumbnail-v {
+                height: 200px;
+                width: auto;
+            }
+            a.link {
+                font-size: 0.7em;
+            }
+            .reveal td {
+                vertical-align: top;
+            }
+        </style>
+	</head>
 
-    <style>
-        .thumbnail {
-            width: 40%;
-        }
-        .thumbnail-v {
-            height: 200px;
-            width: auto;
-        }
-        a.link {
-            font-size: 0.7em;
-        }
-        .reveal td {
-            vertical-align: top;
-        }
-    </style>
-</head>
+	<body>
 
-<body>
+		<div class="reveal">
 
-    <div class="reveal">
-
-        <!-- Any section element inside of this container is displayed as a slide -->
-        <div class="slides">
-
+			<!-- Any section element inside of this container is displayed as a slide -->
+			<div class="slides">
+				
             <section>
                 <h1>Ratmap</h1>
                 <p>
@@ -194,64 +191,37 @@
                     <small><a href="http://meredithmmyers.com">meredithmmyers.com</a> | <a href="http://twitter.com/meredithmmyers">@meredithmmyers</a></small>
                 </p>
             </section>
+			</div>
 
-            <script src="lib/js/head.min.js"></script>
-            <script src="js/reveal.min.js"></script>
+		</div>
 
-            <script>
-            // Full list of configuration options available here:
-            // https://github.com/hakimel/reveal.js#configuration
-            Reveal.initialize({
-                controls: true,
-                progress: true,
-                history: true,
-                center: true,
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
 
-                theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-                transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+		<script>
 
-                // Parallax scrolling
-                // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
-                // parallaxBackgroundSize: '2100px 900px',
+			// Full list of configuration options available at:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
 
-                // Optional libraries used to extend on reveal.js
-                dependencies: [{
-                    src: 'lib/js/classList.js',
-                    condition: function() {
-                        return !document.body.classList;
-                    }
-                }, {
-                    src: 'plugin/markdown/marked.js',
-                    condition: function() {
-                        return !!document.querySelector('[data-markdown]');
-                    }
-                }, {
-                    src: 'plugin/markdown/markdown.js',
-                    condition: function() {
-                        return !!document.querySelector('[data-markdown]');
-                    }
-                }, {
-                    src: 'plugin/highlight/highlight.js',
-                    async: true,
-                    callback: function() {
-                        hljs.initHighlightingOnLoad();
-                    }
-                }, {
-                    src: 'plugin/zoom-js/zoom.js',
-                    async: true,
-                    condition: function() {
-                        return !!document.body.classList;
-                    }
-                }, {
-                    src: 'plugin/notes/notes.js',
-                    async: true,
-                    condition: function() {
-                        return !!document.body.classList;
-                    }
-                }]
-            });
-            </script>
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
-</body>
+				// Optional reveal.js plugins
+				dependencies: [
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true },
+					{ src: 'plugin/notes/notes.js', async: true }
+				]
+			});
 
+		</script>
+
+	</body>
 </html>
