Updates to presentation

--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
                 height: 200px;
                 width: auto;
             }
+            .thumbnail-m {
+            	width: 150px;
+            	height: auto;
+            }
             a.link {
                 font-size: 0.7em;
             }
             .reveal td {
                 vertical-align: top;
+            }
+            .tech p {
+            	text-align: center;
             }
         </style>
 	</head>
@@ -67,32 +74,35 @@
                 <p>A simple web application that allows users to view and explore rat sightings in NYC</p>
                 <img src="images/ratmap-full.png" />
             </section>
+
             <section>
-                <h2>public service announcement</h2>
-                <p>A markdown version of this presentation is available at <a href="">Some link</a>
-                </p>
+                <p>This presentation is available at <a href="">Some link</a></p>
             </section>
 
             <section>
                 <h2>Data</h2>
                 <ul>
                     <li>NYC Dept of Environmental Protection 311 Service Requests from 2010 to present</li>
-                    <li>Updated daily</li>
-                    <li>Accessed using Socrata's Open Data API (SODA)</li>
-                    <li>Easy access of data and usage of filters, queries, and aggregation</li>
-                    <pre><code>http://data.cityofnewyork.us/resource/3q43-55fe?$limit=10000</code></pre>
+                    <li class="fragment">Updated daily</li>
+                    <li class="fragment">Accessed using Socrata's Open Data API (SODA)</li>
+                    <li class="fragment">Easy access of data and usage of filters, queries, and aggregation
+                    <pre><code>http://data.cityofnewyork.us/resource/3q43-55fe?$limit=10000</code></pre></li>
                 </ul>
+                <aside class="notes">
+                	Go down three, then over
+								</aside>
             </section>
 
             <section>
                 <h2>Technology</h2>
-                <ul>
-                    <li>Angular</li>
-                    <li>Leaflet (with plugins)</li>
-                    <li>Bootstrap</li>
-                    <li>Bower</li>
-                    <li>Gulp</li>
-                </ul>
+                	<table class="tech">
+                    <tr><td><img class="thumbnail-m" src="images/leaflet.png"/><p>Leaflet</p></td>
+                    <td><img class="thumbnail-m" src="images/angular.png"/><p>Angular</p></td>
+                    <td><img class="thumbnail-m" src="images/bootstrap.png"/><p>Bootstrap</p></td></tr>
+                    <tr><td><img class="thumbnail-m" src="images/bower.png"/><p>Bower</p></td>
+                    <td><img class="thumbnail-m" src="images/gulp.png"/><p>Gulp</p></td>
+                    <td><img class="thumbnail-m" src="images/github.png"/><p>Pages</p></td></tr>
+                  </table>
             </section>
 
             <section>
@@ -100,9 +110,12 @@
                     <h2>Design</h2>
                     <ul>
                         <li>Visualization appearance</li>
-                        <li>User interaction</li>
-                        <li>Overall page presentation</li>
+                        <li class="fragment">User interaction</li>
+                        <li class="fragment">Overall page presentation</li>
                     </ul>
+                    <aside class="notes">
+                			Go down
+										</aside>
                 </section>
                 <section>
                     <h2>Visualization appearance</h2>
@@ -110,6 +123,7 @@
                     <p><a href="http://esri.github.io/esri-leaflet/" class="link">http://esri.github.io/esri-leaflet</a>
                     </p>
                     <img class="thumbnail" src="images/tiles-color.png"/> <img class="thumbnail" src="images/tiles-gray.png"/>
+                     <aside class="notes">Go down</aside>
                 </section>
                 <section>
                     <h2>Visualization appearance</h2>
@@ -117,6 +131,7 @@
                     <p><a href="https://github.com/Leaflet/Leaflet.markercluster" class="link">https://github.com/Leaflet/Leaflet.markercluster</a>
                     </p>
                     <img src="images/marker-clusters.png"/>
+                    <aside class="notes">Go down</aside>
                 </section>
                 <section>
                     <h2>Visualization appearance</h2>
@@ -124,6 +139,7 @@
                     <p><a href="https://github.com/Leaflet/Leaflet.heat" class="link">https://github.com/Leaflet/Leaflet.heat</a>
                     </p>
                     <img class="thumbnail" src="images/heatmap-default.png"/> <img class="thumbnail" src="images/heatmap-custom.png"/>
+                    <aside class="notes">Go down</aside>
                 </section>
                <section>
                 <h2>User interaction</h2>
@@ -151,6 +167,7 @@
                         </td>
                     </tr>
                 </table>
+                <aside class="notes">Go down</aside>
             </section>
 
                 <section>
@@ -160,22 +177,28 @@
                         <li>Fonts</li>
                         <li>Responsiveness</li>
                     </ul>
+                    <aside class="notes">Go over</aside>
                 </section>
+                
             </section>
 
             <section>
                 <section>
                     <h2>Lessons Learned</h2>
+                    <aside class="notes">Go down</aside>
                 </section>
                 <section>
                     <p>Keep it simple</p>
+                    <aside class="notes">Go down</aside>
                 </section>
                 <section>
                     <p>Design matters. Luckily you don't have to be an amazing designer.</p>
+                    <aside class="notes">Go down</aside>
                 </section>
                 <section>
                     <p>Don't judge a book by a cover, but do judge an app by its name.</p>
                     <img style="width: 70%;" src="images/hackernews.png"/>
+                    <aside class="notes">Go over</aside>
                 </section>
             </section>
 
