--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </section>
 
             <section>
-                <p>This presentation is available at <a href="">Some link</a></p>
+                <p>This presentation is available at <a href="meredithmmyers.com/ratmap-presentation">meredithmmyers.com/ratmap-presentation</a></p>
             </section>
 
             <section>
@@ -85,7 +85,7 @@
                     <li>NYC Dept of Environmental Protection 311 Service Requests from 2010 to present</li>
                     <li class="fragment">Updated daily</li>
                     <li class="fragment">Accessed using Socrata's Open Data API (SODA)</li>
-                    <li class="fragment">Easy access of data and usage of filters, queries, and aggregation
+                    <li class="fragment">Easy access of data and usage of filters, queries, <br> and aggregation
                     <pre><code>http://data.cityofnewyork.us/resource/3q43-55fe?$limit=10000</code></pre></li>
                 </ul>
                 <aside class="notes">
@@ -155,7 +155,7 @@
                                     <ul>
                                         <li>Dwelling type</li>
                                         <li>Report date</li>
-                                        <li>Address or cross street</li>
+                                        <li>Address or <br> cross street</li>
                                         <li>Borough</li>
                                     </ul>
                                 </li>
@@ -192,11 +192,11 @@
                     <aside class="notes">Go down</aside>
                 </section>
                 <section>
-                    <p>Design matters. Luckily you don't have to be an amazing designer.</p>
+                    <p>Design matters. Luckily you don't have to be an <br> amazing designer.</p>
                     <aside class="notes">Go down</aside>
                 </section>
                 <section>
-                    <p>Don't judge a book by a cover, but do judge an app by its name.</p>
+                    <p>Don't judge a book by a cover, but do judge an <br> app by its name.</p>
                     <img style="width: 70%;" src="images/hackernews.png"/>
                     <aside class="notes">Go over</aside>
                 </section>
