--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </section>
 
             <section>
-                <p>This presentation is available at <a href="meredithmmyers.com/ratmap-presentation">meredithmmyers.com/ratmap-presentation</a></p>
+                <p>This presentation is available at <a href="http://meredithmmyers.com/ratmap-presentation">meredithmmyers.com/ratmap-presentation</a></p>
             </section>
 
             <section>
