--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <section>
                 <p>A simple web application that allows users to view and explore rat sightings in NYC</p>
                 <img src="images/ratmap-full.png" />
+                <a href="http://meredithmmyers.com/ratmap">meredithmmyers.com/ratmap</a>
             </section>
 
             <section>
@@ -192,7 +193,7 @@
                     <aside class="notes">Go down</aside>
                 </section>
                 <section>
-                    <p>Design matters. Luckily you don't have to be an <br> amazing designer.</p>
+                    <p>Design matters</p>
                     <aside class="notes">Go down</aside>
                 </section>
                 <section>
