--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             a.link {
                 font-size: 0.7em;
             }
+            .full-size {
+                height: 500px;
+                width: auto;
+            }
             .reveal td {
                 vertical-align: top;
             }
@@ -72,8 +76,8 @@
 
             <section>
                 <p>A simple web application that allows users to view and explore rat sightings in NYC</p>
-                <img src="images/ratmap-full.png" />
-                <a href="http://meredithmmyers.com/ratmap">meredithmmyers.com/ratmap</a>
+                <a class="link" href="http://meredithmmyers.com/ratmap">meredithmmyers.com/ratmap</a>
+                <img class="full-size" src="images/ratmap-full.png" />
             </section>
 
             <section>
