--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>RATMAP</title>
 
 		<meta name="description" content="A simple web application that allows users to view and explore rat sightings in NYC">
-		<meta name="author" content="Meredith M Myers">
+		<meta name="author" content="Ben Myers">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -70,18 +70,18 @@
             <section>
                 <h1>Ratmap</h1>
                 <p>
-                    <small><a href="http://meredithmmyers.com">Meredith M Myers</a> | <a href="http://twitter.com/meredithmmyers">@meredithmmyers</a></small>
+                    <small><a href="http://benjmyers.com">Benjamin E. Myers</a> | <a href="http://twitter.com/_benjmyers">@_benjmyers</a></small>
                 </p>
             </section>
 
             <section>
                 <p>A simple web application that allows users to view and explore rat sightings in NYC</p>
-                <a class="link" href="http://meredithmmyers.com/ratmap">meredithmmyers.com/ratmap</a>
+                <a class="link" href="http://benjmyers.com/ratmap">benjmyers.com/ratmap</a>
                 <img class="full-size" src="images/ratmap-full.png" />
             </section>
 
             <section>
-                <p>This presentation is available at <a href="http://meredithmmyers.com/ratmap-presentation">meredithmmyers.com/ratmap-presentation</a></p>
+                <p>This presentation is available at <a href="http://benjmyers.com/ratmap-presentation">benjmyers.com/ratmap-presentation</a></p>
             </section>
 
             <section>
@@ -216,7 +216,7 @@
             <section>
                 <h2>Thank You!</h2>
                 <p>
-                    <small><a href="http://meredithmmyers.com">meredithmmyers.com</a> | <a href="http://twitter.com/meredithmmyers">@meredithmmyers</a></small>
+                    <small><a href="http://benjmyers.com">benjmyers.com</a> | <a href="http://twitter.com/_benjmyers">@_benjmyers</a></small>
                 </p>
             </section>
 			</div>
